<resources>
    <string name="app_name">FACE MATCH APP</string>
    <string name="open_camera">Open Camera</string>
    <string name="name_hint">Name of image</string>
    <string name="submit_text">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image_button">Pick an image</string>
    <string name="verify_face_button_text">Verify Face</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="match_face_title">Match Faces</string>
    <string name="close">Close</string>
    <string name="match_none">None</string>
    <string name="match_percentage_label">Percentage</string>
    <string name="match_score_label">Score</string>
    <string name="match_result_label">Result</string>
    <string name="match_result_heading">Match Results</string>
</resources>