<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider"
    android:paddingBottom="30dp"
    android:gravity="center">

    <TextView
        android:id="@+id/match_result_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_result_heading"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
      />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:layout_marginHorizontal="30dp"
    android:columnCount="2">
        <TextView
            android:id="@+id/match_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_result_label"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/match_result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_none"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/match_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_score_label"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/match_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_none"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/match_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_percentage_label"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/match_percentage_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_none"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"/>


</GridLayout>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/close"
        android:textColor="#fff" />

</LinearLayout>



