<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/match_face_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/base_face_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/base_face_image"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            tools:layout_editor_absoluteX="164dp"
            tools:srcCompat="@tools:sample/avatars" />


        <ImageView
            android:id="@+id/probe_face_image"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/base_face_image"
            tools:layout_editor_absoluteY="48dp"
            tools:srcCompat="@tools:sample/avatars" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/base_face_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/purple_500"
            android:contentDescription="@string/pick_an_image"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="@id/base_face_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/base_face_image"
            app:layout_constraintTop_toTopOf="@id/base_face_image"
            app:tint="#fff"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/probe_face_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="@id/probe_face_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/probe_face_image"
            app:layout_constraintTop_toTopOf="@id/probe_face_image"
            android:contentDescription="@string/pick_an_image"
            app:tint="#fff"/>



        <Button
            android:id="@+id/verify_face_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_face_button_text"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/probe_face_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>









